[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/Fonts/Minecraft.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/Screem/button2.png" type="Texture" id=2]
[ext_resource path="res://scripts/LevelSelection.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 8
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 32
font_data = ExtResource( 1 )

[node name="LevelSelection" type="Node2D"]
script = ExtResource( 3 )

[node name="ManaLevel" type="Node2D" parent="."]
position = Vector2( 41, 27 )

[node name="Button" type="Button" parent="ManaLevel"]
margin_left = 41.0
margin_top = 60.0
margin_right = 481.0
margin_bottom = 203.0

[node name="Sprite" type="Sprite" parent="ManaLevel/Button"]
position = Vector2( 217.5, 76.5 )
scale = Vector2( 8.939, 12.229 )
texture = ExtResource( 2 )

[node name="Label" type="Label" parent="ManaLevel/Button/Sprite"]
margin_left = -22.4625
margin_top = -4.20112
margin_right = 24.5375
margin_bottom = 3.79888
custom_fonts/font = SubResource( 1 )
text = "Mana Level"
align = 1
valign = 1

[node name="FireLevel" type="Node2D" parent="."]
position = Vector2( 722, 27 )

[node name="Button" type="Button" parent="FireLevel"]
margin_left = 41.0
margin_top = 60.0
margin_right = 481.0
margin_bottom = 203.0

[node name="Sprite" type="Sprite" parent="FireLevel/Button"]

[node name="Label" type="Label" parent="FireLevel/Button"]
margin_right = 440.0
margin_bottom = 143.0
custom_fonts/font = SubResource( 2 )
text = "Comming Soon"
align = 1
valign = 1

[node name="EarthLevel" type="Node2D" parent="."]
position = Vector2( 41, 439 )

[node name="Button" type="Button" parent="EarthLevel"]
margin_left = 41.0
margin_top = 60.0
margin_right = 481.0
margin_bottom = 203.0

[node name="Sprite" type="Sprite" parent="EarthLevel/Button"]

[node name="Label" type="Label" parent="EarthLevel/Button"]
margin_right = 440.0
margin_bottom = 143.0
custom_fonts/font = SubResource( 3 )
text = "Comming Soon"
align = 1
valign = 1

[node name="SkyLevel" type="Node2D" parent="."]
position = Vector2( 722, 439 )

[node name="Button" type="Button" parent="SkyLevel"]
margin_left = 41.0
margin_top = 60.0
margin_right = 481.0
margin_bottom = 203.0

[node name="Sprite" type="Sprite" parent="SkyLevel/Button"]

[node name="Label" type="Label" parent="SkyLevel/Button"]
margin_right = 440.0
margin_bottom = 143.0
custom_fonts/font = SubResource( 4 )
text = "Comming Soon"
align = 1
valign = 1

[connection signal="mouse_entered" from="ManaLevel/Button" to="." method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="ManaLevel/Button" to="." method="_on_Button_mouse_exited"]
[connection signal="pressed" from="ManaLevel/Button" to="." method="_on_Button_pressed"]
